<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinConnect</string>
    <string name="action_settings">Settings</string>
    <string name="description">LinConnect mirrors Android notifications on a Linux deskop.</string>
    <string name="configuration">Configuration</string>
    <string name="information">Information</string>
    
    <!-- strings of xml/pref_general.xml -->
    <string name="cat_setup">Setup</string>
    <string name="pref_toggle">Enable LinConnect</string>
    <string name="pref_download">Step 1: Download server on desktop</string>
    <string name="pref_download_summary">Tap here to share the download URL</string>
    <string name="pref_enable">Step 2: Enable notification service</string>
    <string name="pref_enable_summary">Tap here and select LinConnect</string>
    <string name="cat_method">Step 3: Select Method</string>
    <string name="pref_method_wifi">Wifi</string>
    <string name="pref_method_wifi_summary">Notify by Wifi</string>
    <string name="pref_method_bt">Bluetooth</string>
    <string name="pref_method_bt_summary">Notify by Bluetooth</string>
    <string name="cat_servers">Step 4.1: Select Wifi Server</string>
    <string name="pref_ip">Custom IP address</string>
    <string name="pref_refresh">Refresh server list</string>
    <string name="pref_network_scan">Scanning network for servers...</string>
    <string name="cat_bt_device">Step 4.2: Select Bluetooth Device</string>
    <string name="pref_launch_bt">Bluetooth preferences</string>
    <string name="pref_launch_bt_summary">Tap here to set bluetooth devices</string>
    <string name="bt_device">None</string>
    <string name="bt_device_summary">Tap here to change Bluetooth device</string>
    <string name="test_bt_device">Test</string>
    <string name="test_bt_device_summary">Tap here to test Bluetooth device connection</string>
    <string name="pref_application">Enabled applications</string>
    <string name="pref_application_summary">Tap here to choose which applications can send notifications to the desktop (optional)</string>
    <string name="pref_additional_options">Additional options</string>
    <string name="pref_additional_options_summary">Additional options can be found in the server configuration file (conf.ini)</string>
    <string name="pref_google_plus">Follow on Google+</string>
    <string name="pref_google_plus_summary">Tap here to follow yycode on Google+</string>
    <string name="pref_donate_play">Donate via Google Play</string>
    <string name="pref_donate_play_summary">Tap here to donate by purchasing Donation Key</string>
    <string name="pref_donate_btc">Donate via Bitcoin</string>
    <string name="pref_donate_btc_summary">Tap here to donate via Bitcoin</string>
    <string name="pref_test_notif1">Hello from Android !</string>
    <string name="pref_test_notif2">Test succesful @ </string>
    <string name="pref_test_notif_recieved">Test notification recieved</string>
    <string name="pref_test_notif_not_recieved">Test notification not recieved. Ensure the server is updated to the latest version.</string>
    <!-- strings of xml/pref_application.xml -->
    <string name="header_application">Installed Applications</string>
    <string name="pref_all">Check/uncheck all</string>


    <string name="header_bluetooth">Paired BT devices</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>
    <string name="service_stop_notif">Stop notification</string>
    <string name="service_start_notif">Start notification</string>
</resources>
